--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
     "requests-cache>=1.2.1",
+    "rich>=14.1.0",
 ]
 
 [dependency-groups]
